--- a/style3.css
+++ b/style3.css
@@ -115,7 +115,7 @@ button:hover
     body
 {
     color: white;
-    background-image: url("light.jpg");
+    background-image: url("cd.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
