--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*This is the css style sheet for the arithmetic calculator which is used to design and style the page*/
 body
 {
     text-align: center;
