--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,4 @@
+/*This is the css style sheet for the main page of the project in which the styles and design of the web page are implemented */
 body
 {
     background-image: url("grad.png");
