--- a/style3.css
+++ b/style3.css
@@ -1,3 +1,4 @@
+/*This is the css style sheet for the group bio datacpage of the project in which the styles and design of the web page are implemented */
 body
 {
     color: white;
