--- a/style2.css
+++ b/style2.css
@@ -112,7 +112,7 @@ h2{
     {
         body
         {
-            background-image: url("black.jpg");
+            background-image: url("grad.png");
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
